<resources>
    <string name="app_name">aridgway-CountBook</string>

    <string name="title_activity_new_counter">NewCounter</string>
    <string name="new_counter_text">
        Counter requires a name and starting value.
    </string>
    <string name="counter_name_hint">Counter Name</string>
    <string name="initial_val_hint">Initial Value</string>
    <string name="comment_hint">Comments</string>

    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="inc_button">+</string>
    <string name="dec_button">-</string>
    <string name="reset_button">RESET</string>
    <string name="delete_button">DELETE</string>

    <string name="edit_counter_name">Name:</string>
    <string name="edit_counter_init_val">Initial Value:</string>
    <string name="edit_counter_current_val">Current Value:</string>
    <string name="edit_counter_comment">Comments:</string>
</resources>